# wonderbox

./: .travis.yml  Cargo.toml  changelog.md  license_apache.txt  readme.md  rust-toolchain  rustfmt.toml
src/: lib.rs  main.rs
tests/: attribute_compiles.rs  autoresolved_ctor_can_be_registered_with_macro.rs  autoresolved_ctor_can_be_resolved_as_trait_object_with_macro.rs  autoresolved_ctor_can_be_resolved_with_macro.rs  autoresolved_ctor_with_params_as_trait_object_generates_factory_that_is_injected.rs  autoresolved_ctor_with_params_as_trait_object_generates_factory_with_no_params_that_is_injected.rs  autoresolved_ctor_with_params_can_be_registered.rs  autoresolved_ctor_with_params_can_be_resolved.rs  autoresolved_ctor_with_params_can_be_resolved_as_trait_object.rs  autoresolved_ctor_with_params_generates_factory.rs  autoresolved_ctor_with_params_generates_factory_that_is_injected.rs  autoresolved_empty_ctor_can_be_registered.rs  autoresolved_empty_ctor_can_be_resolved.rs  autoresolved_empty_ctor_can_be_resolved_as_trait_object.rs  autoresolved_empty_ctor_generates_factory.rs  autoresolves_generic_as_trait_object.rs  autoresolves_generics.rs  autoresolves_generics_of_different_types.rs  ui.rs
tests/ui/: misplaced_attribute.stderr  misplased_attribute.rs  multiple_constructors.rs  multiple_constructors.stderr  no_constructors.rs  no_constructors.stderr
vax-codegen/: Cargo.toml
vax-codegen/src/: lib.rs
vax-derive/: Cargo.toml
wonderbox-codegen/: Cargo.toml
wonderbox-codegen/src/: lib.rs  spanned.rs
