[package]
name = "wonderbox"
description = """
A minimalistic IoC library.
"""
version = "0.3.0"
authors = ["Jan Nils Ferner <jn_ferner@hotmail.de>"]
repository = "https://github.com/jnferner/wonderbox"
homepage = "https://github.com/jnferner/wonderbox"
documentation = "https://docs.rs/wonderbox"
edition = "2018"
license = "MIT/Apache-2.0"
keywords = [ "dependency", "injection", "ioc" ]

[dependencies.wonderbox-codegen]
path = "wonderbox-codegen"
version = "0.3.0"

[dev-dependencies]
trybuild = "1.0"

[workspace]
members = [
    "wonderbox-codegen"
]
